# ng_binary

./: .gitignore  README.md  compilation_readme.md  config.py  export_model.py  inference_utils.py  network.py  point_pillars_prediction.py  processors_static.py  read_log.py  requirements.txt  setup.py  tvm_conv.py
cpp/: CMakeLists.txt  main.cpp
logs/train/: events.out.tfevents.1735667241.deadshot.3423781.0.v2  events.out.tfevents.1735768628.deadshot.3592995.0.v2
logs/validation/: events.out.tfevents.1735672833.deadshot.3423781.1.v2  events.out.tfevents.1735774287.deadshot.3592995.1.v2
point_pillars.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
saved_model_dir2/: fingerprint.pb
saved_model_dir4/variables/: variables.index
src/: point_pillars.cpp  point_pillars_.cpp  test  test.cpp
